# yew_sandbox

./: Cargo.toml  index.html
src/: lib.rs  main.css  main.rs  router.rs
src/components/atoms/: custom_button.rs  main_title.rs  text_input.rs
src/components/molecules/: custom_form.rs
src/components/pages/: hello.rs  home.rs
