[package]
name = "todo_app_yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.7.0"
serde = "1.0.137"
serde_json = "1.0.81"
stylist = {version = "0.10.0", features = ["yew"]}
wasm-bindgen = "0.2.80"
web-sys = {version = "0.3.57", features = ["HtmlInputElement"]}
yew = "0.19.3"
